# ReadingProjectTemplate

./: .gitignore  CLAUDE-root-template.md  CLAUDE-template.md  README-template.md  README.md  create_project.sh
ReadingExample/: .claude  .github  .gitignore  .mcp.json  READING-LOG.md  README.md  pyproject.toml  setup_mac.sh
ReadingExample/.claude/skills/mistral-pdf-to-markdown/: SKILL.md  reference.md
ReadingExample/.claude/skills/mistral-pdf-to-markdown/scripts/: convert_pdf_to_markdown.py
ReadingExample/.claude/skills/zotero-paper-reader/: SKILL.md
ReadingExample/.claude/skills/zotero-paper-reader/scripts/: get_zotero_pdf.py
ReadingExample/Notes/: STYLE-GUIDE.md  references.bib
ReadingExample/Output/: STYLE-GUIDE.md
config/: STYLE-GUIDE.md
config/.claude/: settings.local.json
config/.claude/skills/method-tracker/: SKILL.md
config/.claude/skills/mistral-pdf-to-markdown/: SKILL.md  reference.md
config/.claude/skills/research-junshi/: SKILL.md
config/.claude/skills/zotero-paper-reader/: SKILL.md
config/scripts/: convert_pdf_to_markdown.py  copy_compiled.sh  sync_pdfs.sh
scripts/: get_zotero_pdf.py
shared/: .gitignore  .mcp.json  STYLE-GUIDE.md
shared/.claude/: settings.local.json
shared/.claude/agents/: note-checker.md
shared/.claude/skills/mistral-pdf-to-markdown/: SKILL.md  reference.md
shared/.claude/skills/zotero-paper-reader/: SKILL.md
